# sdodtools

./: .gitignore  INSTALL.md  README.md  README_Crypt.md  pyproject.toml  pyproject.toml.j2  test.py
.github/actions/: build-directory.yaml
.github/actions/build-directory/: action.yaml
.github/actions/checkout-tag/: action.yaml
.github/workflows/: build.yaml  release.yaml
examples/: example-1.py  example-2.py  example-3.py  example-4.py  example-5.py
lib/Cli/: Utils.py
lib/Crypt/: Keys.py  Secrets.py
src/sdodtools/: __init__.py  crypt_manage.py
src/sdodtools/Cli/: Command.py  Utils.py  __init__.py
src/sdodtools/Crypt/: Keys.py  Secrets.py  __init__.py
src/sdodtools/CurlHttp/: Auth.py  Command.py  Connection.py  Handler.py  Host.py  Query.py  Request.py  __init__.py
src/sdodtools/UrllibCurl/: Auth.py  Handler.py  Proxy.py  __init__.py
src/sdodtools_briconaut/: __init__.py  crypt_manage.py
src/sdodtools_briconaut/Cli/: Utils.py
src/sdodtools_briconaut/Crypt/: Keys.py  Secrets.py  __init__.py
src/sdodtools_briconaut/UrllibCurl/: Auth.py  Handler.py  Proxy.py  __init__.py
templates/: pyproject.toml
