[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdodtools_tsbo"
version = "0.0.1"
authors = [
  { name="Thomas Brunko", email="thomas.brunko@gmail.com" },
]
description = "A set of small helpers to overcome SDOD limitations."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tsbo/sdodtools"
; Issues = "https://github.com/pypa/sampleproject/issues"
