[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = {{ build_version }}
name = "sdodtools_briconaut"
description = "A set of small helpers to overcome SDOD limitations."
authors = [
  { name="briconaut", email="briconaut@gmx.de" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",

  "Operating System :: GIT bash",
]
keywords = [ "sdod", "proxy", "curl" ]

[project.urls]
Homepage = "https://github.com/com-gft-deuba/sdodtools"
Repository = "https://github.com/com-gft-deuba/sdodtools.git"
Issues = "https://github.com/com-gft-deuba/sdodtools/issues"

[project.scripts]
crypt_manage ="sdodtools.crypt_manage:main"

[tool.setuptools]
